fix(text-field): align right area content center #24

--- a/src/tedi/components/form/textfield/textfield.module.scss
+++ b/src/tedi/components/form/textfield/textfield.module.scss
@@ -147,7 +147,7 @@ $input-padding-right-map: (
   right: 0;
   display: flex;
   gap: var(--layout-grid-gutters-04);
-  align-items: flex-start;
+  align-items: center;
   height: 100%;
   padding: var(--form-field-padding-y-md-default) var(--form-field-padding-x-md-default);
 
